Revise apache to only server codetri playground

--- a/httpd.conf
+++ b/httpd.conf
@@ -1,9 +1,4 @@
 <VirtualHost *:80>
-  DocumentRoot "/var/www/html/main"
-  ServerName codetri.net
-</VirtualHost>
-
-<VirtualHost *:80>
-  DocumentRoot "/var/www/html/demo"
   ServerName demo.codetri.net
+  DocumentRoot "/var/www/html"
 </VirtualHost>
